--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sweetalert2": "^11.6.15",
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
+    "vue-i18n": "^9.4.1",
     "vue-router": "^4.1.6",
     "vue-star-rating": "^2.1.0",
     "vue3-star-ratings": "^1.1.0",
